ansible/wheecious01/grafana/files/grafana-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: loki
spec:
  stripPrefix:
    prefixes:
      - /grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: loki
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: loki-grafana-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: wheecious.serik.red
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
